Update docs: Fix table not fit to page size

--- a/docs/style.css
+++ b/docs/style.css
@@ -29,7 +29,8 @@ table * {
 }
 table {
     border-collapse: collapse;
-    width: 100%;
+	table-layout: fixed;
+	width: 100%; 
 }
 td i {
 	/* Faint italics for minor details + easier reading */
@@ -40,26 +41,29 @@ td i:before {
 	display: block;
 	content: " ";
 }
+/* border: 1px solid rgba(0,33,15,1); */
 th {
 	padding-left: 1vw;
-    padding-right: 1vw;
+    padding-right: 1vw; 
+	padding-top: 1vw;
+    padding-bottom: 1vw;
+    text-align: left;
+    background-color: rgba(162,180,191,1);
+    color: white;
+}
+th a, th a:visited {
+	color: rgba(255,255,255,1);
+	text-decoration-color: rgba(255,255,255, 0.6);
+	-webkit-text-decoration-color: rgba(255,255,255, 0.6); 
 }
 td {
 	vertical-align: top;
-    border: 1px solid rgba(0,55,33,0.15);
+    border: 0.1vw solid rgba(0,55,33,0.15);
     padding-top: 1vw;
     padding-left: 1vw;
     padding-right: 1vw;
 }
-tr:nth-child(even){background-color: #f2f2f2;}
-tr:hover {background-color: #ddddd;}
-th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background-color: #73bcd8;
-    color: white;
-}
+tr:nth-child(even){background-color: rgba(242,242,242,1);}
 /* View-width is a bad idea after a certain width is met.
  * This keeps a maximum font size after the given width is met.
  */
@@ -99,7 +103,7 @@ body {
 	overflow: hidden;	
 	width: 100%;
 	height: 30vw;
-	border-bottom: 2px solid rgba(80,102,115,0.7);
+	border-bottom: 0.2vw solid rgba(80,102,115,0.7);
 }
 .banner img {
 	opacity: 0.7;
@@ -130,9 +134,9 @@ body {
 /* Navbar */
 .navbar {
 	background: rgba(162,180,191,1);
-	border-bottom: 5px solid rgba(200,220,255,0.5);
-	box-shadow: 0px 2px 0px 0px rgba(80,102,115,1);
-	margin-bottom: 2px;
+	border-bottom: 0.45vw solid rgba(200,220,255,0.5);
+	box-shadow: 0 0.15vw 0 0 rgba(80,102,115,1);
+	margin-bottom: 0.15vw;
 }
 .navbar ul {
     list-style-type: none;
